@@ -1,4 +1,5 @@
 Version 4.0.23 (2014-04-xx)
+	Added isSameOrigin method to tinymce.util.URI it handles default protocol port numbers better. Patch contributed by Matt Whelan.
 	Fixed bug where IE 11 would add br elements to the end of the editor body element each time it was shown/hidden.
 	Fixed bug where the autolink plugin would produce an index out of range exception for some very specific HTML.
 	Fixed bug where the charmap plugin wouldn't properly insert non breaking space characters when selected.
